--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,23 +26,23 @@ services:
             image: redis:3.2.1
             ports:
                         - "6379:6379"
-    # openresty-1.11.2.1:
-    #         container_name: openresty-1.11.2.1
-    #         build:          ./openresty1.11.2.1
-    #         command:        service nginx start
-    #         ports:
-    #                         - 8888:80
-    #                         - 8080:8080
-    #                         - 9090:9090
-    #                         - 8083:8081
-    #         volumes_from:
-    #                         - www-data
-    #         links:
-    #                         - redis:redis
-    #                         - mysql-master:mysql
-    #         extra_hosts:
-    #                         - cs-api.meizu.com:192.168.99.100
-    #                         - zsk-api.meizu.com:192.168.99.100
+    openresty-1.11.2.1:
+            container_name: openresty-1.11.2.1
+            build:          ./openresty1.11.2.1
+            command:        service nginx start
+            ports:
+                            - 8888:80
+                            - 8080:8080
+                            - 9090:9090
+                            - 8083:8081
+            volumes_from:
+                            - www-data
+            links:
+                            - redis:redis
+                            - mysql-master:mysql
+            extra_hosts:
+                            - cs-api.meizu.com:192.168.99.100
+                            - zsk-api.meizu.com:192.168.99.100
     mysql-master:
             container_name: mysql-master
             image:          mysql:5.7.16
@@ -87,7 +87,7 @@ services:
     #                         - cs-api.meizu.com:192.168.99.100
     #                         - zsk-api.meizu.com:192.168.99.100
     nginx-proxy:
-            container_name: nginx-proxy
+            container_name: openresty-proxy
             build:          ./openresty1.11.2.1
             command:        service nginx start
             expose:
